syntax = "proto3";

package analytics;

option go_package = "github.com/kiribu/jwt-practice/internal/analytics/grpc/pb";

service AnalyticsService {
  rpc GetUserStats(GetUserStatsRequest) returns (UserStatsResponse);
}

message GetUserStatsRequest {
  int64 user_id = 1;
}

message UserStatsResponse {
  int64 user_id = 1;
  int64 total_reminders_created = 2;
  int64 total_reminders_completed = 3;
  int64 total_reminders_deleted = 4;
  int64 active_reminders = 5;
  double completion_rate = 6;
  string first_reminder_at = 7;
  string last_activity_at = 8;
}
